--- a/nature-tours/sass/abstracts/_variables.scss
+++ b/nature-tours/sass/abstracts/_variables.scss
@@ -8,4 +8,5 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
-$default-font-size: 62.5%
+// this is equivalent of 1 rem
+$default-font-size: 62.5%;
