--- a/nature-tours/css/style.css
+++ b/nature-tours/css/style.css
@@ -1,6 +1,7 @@
 /* this file handles the animation of entire project */
 /* for browser it is always better to make use of opacity and text transofrm method
 as they are made for this two property to accommodate */
+@import url("https://fonts.googleapis.com/css?family=Lato:400,900&display=swap");
 @keyframes moveInLeft {
   0% {
     /* at beginning the opacity should be 0 */
@@ -52,10 +53,10 @@ and this is the way to reset all of those before we start coding */
 
 html {
   /* root font size */
-  /* font-size: 10px; */
+  /* font-size: 12px; */
   /*  root font size in px is not good practice from ux point of view hence we have to convert it to percentage */
-  /* 10px = 62.5% -> (10/(default font size = 16))*100 = 62.5% */
-  font-size: 62.5%; }
+  /* 12px = 75% -> (12/(default font size = 16))*100 = 75% */
+  font-size: 75%; }
 
 .body {
   box-sizing: border-box; }
@@ -234,4 +235,41 @@ body {
   max-width: 114rem;
   background-color: #eee;
   color: black;
-  margin: 0 auto; }
+  margin: 0 auto;
+  /*
+        When an element, such as a div is floated, its parent container no longer considers its height, i.e.
+
+        <div id="main">
+            <div id="child" style="float:left;height:40px;"> Hi</div>
+        </div>
+
+        The parent container will not be be 40 pixels tall by default. 
+        This causes a lot of weird little quirks if you're using these containers to structure layout.
+        So the clearfix class that various frameworks use fixes this problem by making the parent 
+        container "acknowledge" the contained elements. 
+
+        why clear:both? answers are here https://stackoverflow.com/questions/12871710/what-does-the-css-rule-clear-both-do
+    */ }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: red;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc( (100% - 6rem)/2); }
+  .row .col-1-of-3 {
+    width: calc( (100% - 2 * 6rem)/3); }
+  .row .col-1-of-4 {
+    width: calc( (100% - 3 * 6rem)/4); }
+  .row .col-2-of-3 {
+    width: calc( 6rem + (2 * ((100% - 2 * 6rem)/3 ))); }
+  .row .col-2-of-4 {
+    width: calc( 6rem + (2 * ((100% - 3 * 6rem)/4 ))); }
+  .row .col-3-of-4 {
+    width: calc( 2*(6rem) + (3 * ((100% - 3 * 6rem)/4 ))); }
