--- a/nature-tours/sass/abstracts/_variables.scss
+++ b/nature-tours/sass/abstracts/_variables.scss
@@ -1,12 +1,20 @@
 // this file contains only variables needed for website to render
 
+//  COLOR and Font Size
+
 $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
-
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
-
 // this is equivalent of 1 rem
-$default-font-size: 62.5%;
+$default-font-size: 75%;
+
+// GRID
+
+// 1140px -> 114rem
+$grid-width: 114rem;
+// 80px -> 8rem
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
