--- a/nature-tours/sass/base/_typography.scss
+++ b/nature-tours/sass/base/_typography.scss
@@ -1,13 +1,12 @@
 // this file mostly deals with the typography based logics
 
 body{
+    @import url('https://fonts.googleapis.com/css?family=Lato:400,900&display=swap');
     font-family: "Lato", sans-serif;
     font-weight: 200;
-    
     /* font size can be commented below because by default the font size is 1rem and it inherits from the root font size
     which is 10px */
     /* font-size: 16px; */
-    
     line-height: 1.7;
     color: $color-grey-dark;
     /* apply 30px padding around entire body, thats the reason you see box layout with gaps on the side, 
