--- a/nature-tours/sass/abstracts/_variables.scss
+++ b/nature-tours/sass/abstracts/_variables.scss
@@ -6,10 +6,9 @@ $color-primary: #7ed56f;
 $color-primary-light: #55c57a;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
+$color-grey-light-1: #f7f7f7;
 $color-white: #fff;
 $color-black: #000;
-// this is equivalent of 1 rem
-$default-font-size: 75%;
 
 // GRID
 
@@ -18,3 +17,7 @@ $grid-width: 114rem;
 // 80px -> 8rem
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+//  FONT
+// this is equivalent of 1 rem
+$default-font-size: 1.6rem;
