final touch added to building tours section

--- a/nature-tours/sass/components/_button.scss
+++ b/nature-tours/sass/components/_button.scss
@@ -37,6 +37,7 @@
 
         &:hover::after{
             transform: scale(1.5);
+            // this is to show invisible after max zoom effect on button
             opacity: 0;
         }
     }
