--- a/nature-tours/css/style.css
+++ b/nature-tours/css/style.css
@@ -313,6 +313,10 @@ body {
       transform: rotateY(180deg); }
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #55c57a, #28b485); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -332,16 +336,18 @@ body {
       background-blend-mode: screen; }
     .card__picture--2 {
       /* here observe the path instead of ../../ we are using ../ because
-                when this code will be compiled, this image i.e. nat-5.jpg will
+                when this code will be compiled, this image i.e. nat-6.jpg will
                 be accessed just one level up 
             */
-      background-image: url(../img/nat-5.jpg); }
+      background-image: linear-gradient(to right bottom, #55c57a, #28b485), url(../img/nat-6.jpg);
+      background-blend-mode: screen; }
     .card__picture--3 {
       /* here observe the path instead of ../../ we are using ../ because
-                when this code will be compiled, this image i.e. nat-5.jpg will
+                when this code will be compiled, this image i.e. nat-7.jpg will
                 be accessed just one level up 
             */
-      background-image: url(../img/nat-5.jpg); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg);
+      background-blend-mode: screen; }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -359,6 +365,10 @@ body {
     -webkit-box-decoration-break: clone; }
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.85), rgba(40, 180, 133, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
   .card__details {
     padding: 3rem; }
     .card__details ul {
@@ -371,6 +381,23 @@ body {
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #eeeeee; }
+  .card__call-to-action {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 300; }
 
 .header {
   /* vh means at every point the height of the box should be 95 percent of viewport height */
