--- a/nature-tours/css/style.css
+++ b/nature-tours/css/style.css
@@ -139,6 +139,9 @@ body {
 .u-center-text {
   text-align: center; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
 
@@ -267,7 +270,6 @@ body {
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
-  color: #777;
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
@@ -399,6 +401,79 @@ body {
     font-size: 6rem;
     font-weight: 300; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+  /* select all direct elements, in our case they are shape and text element */
+  /*  
+            undo the skewX done in story element by using reverse skew technique in this method
+
+            skew cannot be used here because there is precedence problem as translateX(-3rem) in &__shape
+            element is already in use and currently in css this limitation cannot be overridden 
+            transform: skewX(12deg); 
+
+            workaround -> manually add this code to direct child elements i.e. shape and text like below and 
+            then it shall work
+        */ }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    background-color: olivedrab;
+    /* 
+            this code with shape-outside property is useful for side text to get wrapped 
+            around pic in circular style, but not to draw a circle. For drawing a circle we use clip-path as 
+            shown below 
+        */
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    /* code to draw a circle */
+    /* 
+            first parameter 50% controls the size of circle also diameter, next 50% 50% controls movement of 
+            circle at x and y axis on the screen
+        */
+    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(13deg);
+    position: relative; }
+  .story__image {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    text-transform: 1.7rem;
+    text-align: center;
+    color: #fff;
+    opacity: 0;
+    /* 
+            this hides the shakiness of the animation after effects, 
+            sometimes which result in element moving up down 
+        */
+    /* it is used where we dont have to show the visibility of the back part of the image */
+    backface-visibility: hidden;
+    transition: all 0.5s; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
+
 .header {
   /* vh means at every point the height of the box should be 95 percent of viewport height */
   height: 95vh;
@@ -455,7 +530,6 @@ body {
         adjust the width so that it will fill 100% of available space
     */
   max-width: 114rem;
-  color: black;
   margin: 0 auto;
   /*
         When an element, such as a div is floated, its parent container no longer considers its height, i.e.
@@ -517,3 +591,7 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 50rem 0;
   margin-top: -20vh; }
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7; }
