--- a/nature-tours/sass/base/_utilities.scss
+++ b/nature-tours/sass/base/_utilities.scss
@@ -4,7 +4,10 @@
 .u-center-text{text-align: center;}
 
 //  margin-bottom = 80px -> 8rem
+.u-margin-top-big{margin-top: 8rem;}
+
 .u-margin-bottom-big{margin-bottom: 8rem;}
+
 
 .u-margin-bottom-medium{margin-bottom: 4rem;}
 
