--- a/nature-tours/sass/components/_story.scss
+++ b/nature-tours/sass/components/_story.scss
@@ -3,7 +3,7 @@
     //  nice little trick to center block elements
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-    background-color: $color-white;
+    background-color: rgba($color-white, 0.6);
     border-radius: 3px;
     padding: 6rem;
     // to accomodate translateX direction on shape element below we have to increase padding by 3 element
